[gd_scene load_steps=15 format=3 uid="uid://lqe0151di4xf"]

[ext_resource type="Script" path="res://levels/end_screen.gd" id="1_fks6b"]
[ext_resource type="PackedScene" uid="uid://dn0yk3wiakddr" path="res://levels/level_background.tscn" id="1_gi6je"]
[ext_resource type="Texture2D" uid="uid://da7oajlefehbf" path="res://levels/graphics/Tile1.png" id="2_tnhkf"]
[ext_resource type="Texture2D" uid="uid://b7wuoj30joa3a" path="res://levels/graphics/Tile4.png" id="3_ra0iv"]
[ext_resource type="Texture2D" uid="uid://th6750v3w0o0" path="res://levels/graphics/Tile3.png" id="4_5cowe"]
[ext_resource type="Texture2D" uid="uid://dx8yyv7fuapke" path="res://levels/graphics/Tile2.png" id="5_3vn3k"]
[ext_resource type="Texture2D" uid="uid://82wp0q3skl6t" path="res://endgame_screens/tv_time.png" id="6_qvtji"]
[ext_resource type="PackedScene" uid="uid://cd5lt7r4fxxlh" path="res://endgame_screens/faluuka_sprite.tscn" id="7_bui54"]
[ext_resource type="PackedScene" uid="uid://csiqie10ytfxp" path="res://endgame_screens/byggin_sprite.tscn" id="8_e1rg5"]
[ext_resource type="PackedScene" uid="uid://thwhyjbijr85" path="res://endgame_screens/blort_sprite.tscn" id="9_xn6jy"]
[ext_resource type="PackedScene" uid="uid://ycxr5otvsmdc" path="res://endgame_screens/wakka_sprite.tscn" id="10_o14hc"]
[ext_resource type="PackedScene" uid="uid://b7wt2tktewoio" path="res://endgame_screens/gozzuppa_sprite.tscn" id="11_0ys4c"]
[ext_resource type="PackedScene" uid="uid://c6cug2b5cnaov" path="res://endgame_screens/bluuk_sprite.tscn" id="12_2uay0"]
[ext_resource type="PackedScene" uid="uid://dyb6audb4wube" path="res://endgame_screens/the_end_text.tscn" id="14_oyfyq"]

[node name="EndScreen" type="Node2D"]
script = ExtResource("1_fks6b")

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 15.0
one_shot = true
autostart = true

[node name="LevelBackground" parent="." instance=ExtResource("1_gi6je")]
process_mode = 3

[node name="Floor" type="Node2D" parent="."]

[node name="row0" type="Node2D" parent="Floor"]

[node name="Tile5" type="Sprite2D" parent="Floor/row0"]
position = Vector2(377, 199)
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_tnhkf")

[node name="Tile17" type="Sprite2D" parent="Floor/row0"]
position = Vector2(422, 197)
scale = Vector2(0.3, 0.3)
texture = ExtResource("3_ra0iv")

[node name="Tile6" type="Sprite2D" parent="Floor/row0"]
position = Vector2(463.95, 195.75)
scale = Vector2(0.3, 0.3)
texture = ExtResource("4_5cowe")

[node name="Tile7" type="Sprite2D" parent="Floor/row0"]
position = Vector2(502.95, 198.75)
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_tnhkf")

[node name="Tile14" type="Sprite2D" parent="Floor/row0"]
position = Vector2(544.95, 199)
scale = Vector2(0.3, 0.3)
texture = ExtResource("5_3vn3k")

[node name="Tile8" type="Sprite2D" parent="Floor/row0"]
position = Vector2(587.95, 200)
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_tnhkf")

[node name="Tile11" type="Sprite2D" parent="Floor/row0"]
position = Vector2(630.9, 199)
scale = Vector2(0.3, 0.3)
texture = ExtResource("3_ra0iv")

[node name="Tile1" type="Sprite2D" parent="Floor/row0"]
position = Vector2(673.05, 199)
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_tnhkf")

[node name="row1" type="Node2D" parent="Floor"]

[node name="Tile11" type="Sprite2D" parent="Floor/row1"]
position = Vector2(248.1, 207.75)
scale = Vector2(0.3, 0.3)
texture = ExtResource("3_ra0iv")

[node name="Tile9" type="Sprite2D" parent="Floor/row1"]
position = Vector2(291.1, 205.75)
scale = Vector2(0.3, 0.3)
texture = ExtResource("4_5cowe")

[node name="Tile1" type="Sprite2D" parent="Floor/row1"]
position = Vector2(330.1, 207.75)
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_tnhkf")

[node name="Tile2" type="Sprite2D" parent="Floor/row1"]
position = Vector2(372.1, 207.75)
scale = Vector2(0.3, 0.3)
texture = ExtResource("3_ra0iv")

[node name="Tile3" type="Sprite2D" parent="Floor/row1"]
position = Vector2(415.1, 205.75)
scale = Vector2(0.3, 0.3)
texture = ExtResource("4_5cowe")

[node name="Tile4" type="Sprite2D" parent="Floor/row1"]
position = Vector2(454.1, 208.75)
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_tnhkf")

[node name="Tile13" type="Sprite2D" parent="Floor/row1"]
position = Vector2(496.1, 209)
scale = Vector2(0.3, 0.3)
texture = ExtResource("5_3vn3k")

[node name="Tile5" type="Sprite2D" parent="Floor/row1"]
position = Vector2(539.1, 210)
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_tnhkf")

[node name="Tile17" type="Sprite2D" parent="Floor/row1"]
position = Vector2(584.1, 208)
scale = Vector2(0.3, 0.3)
texture = ExtResource("3_ra0iv")

[node name="Tile6" type="Sprite2D" parent="Floor/row1"]
position = Vector2(626.05, 206.75)
scale = Vector2(0.3, 0.3)
texture = ExtResource("4_5cowe")

[node name="Tile7" type="Sprite2D" parent="Floor/row1"]
position = Vector2(665.05, 209.75)
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_tnhkf")

[node name="Tile14" type="Sprite2D" parent="Floor/row1"]
position = Vector2(707.05, 210)
scale = Vector2(0.3, 0.3)
texture = ExtResource("5_3vn3k")

[node name="Tile8" type="Sprite2D" parent="Floor/row1"]
position = Vector2(750.05, 211)
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_tnhkf")

[node name="row2" type="Node2D" parent="Floor"]

[node name="Tile9" type="Sprite2D" parent="Floor/row2"]
position = Vector2(243.1, 214.75)
scale = Vector2(0.3, 0.3)
texture = ExtResource("4_5cowe")

[node name="Tile1" type="Sprite2D" parent="Floor/row2"]
position = Vector2(282.1, 216.75)
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_tnhkf")

[node name="Tile2" type="Sprite2D" parent="Floor/row2"]
position = Vector2(324.1, 216.75)
scale = Vector2(0.3, 0.3)
texture = ExtResource("3_ra0iv")

[node name="Tile3" type="Sprite2D" parent="Floor/row2"]
position = Vector2(367.1, 214.75)
scale = Vector2(0.3, 0.3)
texture = ExtResource("4_5cowe")

[node name="Tile4" type="Sprite2D" parent="Floor/row2"]
position = Vector2(406.1, 217.75)
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_tnhkf")

[node name="Tile13" type="Sprite2D" parent="Floor/row2"]
position = Vector2(448.1, 218)
scale = Vector2(0.3, 0.3)
texture = ExtResource("5_3vn3k")

[node name="Tile5" type="Sprite2D" parent="Floor/row2"]
position = Vector2(491.1, 219)
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_tnhkf")

[node name="Tile17" type="Sprite2D" parent="Floor/row2"]
position = Vector2(536.1, 217)
scale = Vector2(0.3, 0.3)
texture = ExtResource("3_ra0iv")

[node name="Tile6" type="Sprite2D" parent="Floor/row2"]
position = Vector2(578.05, 215.75)
scale = Vector2(0.3, 0.3)
texture = ExtResource("4_5cowe")

[node name="Tile7" type="Sprite2D" parent="Floor/row2"]
position = Vector2(617.05, 218.75)
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_tnhkf")

[node name="Tile14" type="Sprite2D" parent="Floor/row2"]
position = Vector2(659.05, 219)
scale = Vector2(0.3, 0.3)
texture = ExtResource("5_3vn3k")

[node name="Tile8" type="Sprite2D" parent="Floor/row2"]
position = Vector2(702.05, 220)
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_tnhkf")

[node name="Tile11" type="Sprite2D" parent="Floor/row2"]
position = Vector2(745, 219)
scale = Vector2(0.3, 0.3)
texture = ExtResource("3_ra0iv")

[node name="row3" type="Node2D" parent="Floor"]

[node name="Tile3" type="Sprite2D" parent="Floor/row3"]
position = Vector2(228.95, 225.75)
scale = Vector2(0.3, 0.3)
texture = ExtResource("4_5cowe")

[node name="Tile4" type="Sprite2D" parent="Floor/row3"]
position = Vector2(267.95, 228.75)
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_tnhkf")

[node name="Tile13" type="Sprite2D" parent="Floor/row3"]
position = Vector2(309.95, 229)
scale = Vector2(0.3, 0.3)
texture = ExtResource("5_3vn3k")

[node name="Tile5" type="Sprite2D" parent="Floor/row3"]
position = Vector2(352.95, 230)
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_tnhkf")

[node name="Tile17" type="Sprite2D" parent="Floor/row3"]
position = Vector2(397.95, 228)
scale = Vector2(0.3, 0.3)
texture = ExtResource("3_ra0iv")

[node name="Tile6" type="Sprite2D" parent="Floor/row3"]
position = Vector2(439.9, 226.75)
scale = Vector2(0.3, 0.3)
texture = ExtResource("4_5cowe")

[node name="Tile7" type="Sprite2D" parent="Floor/row3"]
position = Vector2(478.9, 229.75)
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_tnhkf")

[node name="Tile14" type="Sprite2D" parent="Floor/row3"]
position = Vector2(520.9, 230)
scale = Vector2(0.3, 0.3)
texture = ExtResource("5_3vn3k")

[node name="Tile8" type="Sprite2D" parent="Floor/row3"]
position = Vector2(563.9, 231)
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_tnhkf")

[node name="Tile11" type="Sprite2D" parent="Floor/row3"]
position = Vector2(606.85, 230)
scale = Vector2(0.3, 0.3)
texture = ExtResource("3_ra0iv")

[node name="Tile1" type="Sprite2D" parent="Floor/row3"]
position = Vector2(649, 230)
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_tnhkf")

[node name="Tile2" type="Sprite2D" parent="Floor/row3"]
position = Vector2(692, 230)
scale = Vector2(0.3, 0.3)
texture = ExtResource("3_ra0iv")

[node name="Tile9" type="Sprite2D" parent="Floor/row3"]
position = Vector2(732, 227)
scale = Vector2(0.3, 0.3)
texture = ExtResource("4_5cowe")

[node name="TvTime" type="Sprite2D" parent="."]
position = Vector2(554, 161)
scale = Vector2(0.33, 0.33)
texture = ExtResource("6_qvtji")

[node name="FaluukaSprite" parent="." instance=ExtResource("7_bui54")]
position = Vector2(477, 167)

[node name="BygginSprite" parent="." instance=ExtResource("8_e1rg5")]
position = Vector2(295, 188)

[node name="BlortSprite" parent="." instance=ExtResource("9_xn6jy")]
position = Vector2(341, 184)

[node name="WakkaSprite" parent="." instance=ExtResource("10_o14hc")]
position = Vector2(617, 188)

[node name="GozzuppaSprite" parent="." instance=ExtResource("11_0ys4c")]
position = Vector2(127, 131)

[node name="BluukSprite" parent="." instance=ExtResource("12_2uay0")]
position = Vector2(714, 102)

[node name="TheEndText" parent="." instance=ExtResource("14_oyfyq")]
position = Vector2(479, 321)

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
